ConvexOptimization/SDPA_INTEL_BLAS/sdpa/libsdpa/Release/libsdpa.log
Build started 10/17/2012 10:02:54 AM.
     1>Project "K:\KL\Packages\ConvexOptimization\SDPA_INTEL_BLAS\sdpa\libsdpa\libsdpa.vcxproj" on node 2 (rebuild target(s)).
     1>InitializeBuildStatus:
         Creating ".\Release\libsdpa.unsuccessfulbuild" because "AlwaysCreate" was specified.
       MessageBuildingWithCompiler:
         Building with Intel(R) C++ Compiler XE 12.1
       ClCompile:
         ***** ClCompile (Win32 - Intel C++)
         C:\Program Files (x86)\Intel\Composer XE 2011 SP1\bin\ia32\icl.exe /c /Qvc10 /Qlocation,link,"$(VCInstallDir)\bin" /IC:\KL\Packages\ConvexOptimization\SDPA_INTEL_BLAS\MKL\10.0.4.023\include /Zi /nologo /W3 /O2 /Ob1 /Qftz- /D WIN32 /D NDEBUG /D _LIB /D F77_CALL_C /D _VC80_UPGRADE=0x0600 /D _MBCS /GF /EHsc /MD /GS /Gy /fp:precise /Zc:wchar_t /Zc:forScope /Fo".\Release/" /Fd".\Release/vc100.pdb" /Gd /TP ..\rsdpa_algebra.cpp ..\rsdpa_dpotrf.cpp ..\rsdpa_io.cpp ..\rsdpa_lib.cpp ..\rsdpa_parts.cpp ..\rsdpa_struct.cpp ..\rsdpa_tool.cpp
         rsdpa_algebra.cpp
     1>K:\KL\Packages\ConvexOptimization\SDPA_INTEL_BLAS\sdpa\rsdpa_include.h(43): error : cannot open source file "mkl_lapack.h"
           #include "mkl_lapack.h"
                                  ^
         
     1>Done Building Project "K:\KL\Packages\ConvexOptimization\SDPA_INTEL_BLAS\sdpa\libsdpa\libsdpa.vcxproj" (rebuild target(s)) -- FAILED.

Build FAILED.

Time Elapsed 00:00:00.36
